--- a/Art.html
+++ b/Art.html
@@ -106,38 +106,38 @@
     <div id="sub-content">
     <article class="container">
         
-        <div data-role="slider" data-width="800" data-height="500">
+        <div data-role="slider" data-width="400" data-height="500">
             <div class="slider-container">
                 <div class="item">
-                    <img src="img/ART1.jpg" alt="1번 이미지" style="width: 100%; height: 100%; object-fit: contain; background-color: black;">
+                    <img src="img/ART1.jpg" alt="1번 이미지">
                     <div class="slide-caption">
                         <h3>정령왕 엘퀴네스 - 엘뤼엔</h3>
                         <p>그림을 그린지 4개월 차에 그린 그림이다. <br>가장 잘 그려졌다고 생각한 작품이다.</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/ART2.jpg" alt="2번 이미지" style="width: 100%; height: 100%; object-fit: contain; background-color: black;">
+                    <img src="img/ART2.jpg" alt="2번 이미지">
                     <div class="slide-caption">
                         <h3>달링 인 더 프랑키스 - 002</h3>
                         <p>중학생때 가장 흥미롭게 본 메카닉물이다. <br>나쁜 친구로만 보였던 캐릭터가 환하게 웃는모습이 아름다워서 그렸다. </p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/ART3.jpg" alt="3번 이미지" style="width: 100%; height: 100%; object-fit: contain; background-color: black;">
+                    <img src="img/ART3.jpg" alt="3번 이미지">
                     <div class="slide-caption">
                         <h3>도쿄구울 - 카네키 켄</h3>
                         <p>중2병과 같이 보낸 애니매니션 캐릭터이다. <br>중2병 그 자체라 마음에 들어 따라그리게 되었다.</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/ART4.jpg" alt="4번 이미지" style="width: 100%; height: 100%; object-fit: contain; background-color: black;">
+                    <img src="img/ART4.jpg" alt="4번 이미지">
                     <div class="slide-caption">
                         <h3>내 방</h3>
                         <p>중1때 글미을 배우고 그린 작품이다. <br>가장 엉성하고 서투르지만 중학생의 추억이 가득 담겨있다.</p> 
                     </div>
                 </div>
                 <div class="item"> 
-                    <img src="img/ART5.jpg" alt="5번 이미지" style="width: 100%; height: 100%; object-fit: contain; background-color: black;">  
+                    <img src="img/ART5.jpg" alt="5번 이미지">  
                     <div class="slide-caption">
                         <h3>나 혼자만 레벨업 - 성진우</h3>
                         <p>고등학생때 그린 그림이다. <br>그림을 자주 그리지 않아 실력이 많이 죽었던 탓인지 다른 그림보다 퀄리티가 좋지는 않다. 하지만 내 최애 애니매이션이기 때문에 추가해보았다.</p>
@@ -159,3 +159,4 @@
     </div>
 </body>
 </html>
+
