--- a/Habit.html
+++ b/Habit.html
@@ -53,7 +53,7 @@
                 <h1>게임</h1>
                 <h3>PC</h3>
                 <p><a href="https://www.leagueoflegends.com/ko-kr/" target="_blank">리그 오브 레전드</a></p>
-                <p><a href="https://youtu.be/CTtUeNabfDk?si=MQUQhOjK9EeG9Ad4" target="_blank">얼불춤</a></p>
+                <p><a href="https://fizzd.itch.io/a-dance-of-fire-and-ice" target="_blank">얼불춤</a></p>
                 <p><a href="https://teamfighttactics.leagueoflegends.com/ko-kr/" target="_blank">전략적 팀 전투: TFT</a></p>
                 <p><a href="https://mahjongsoul.yo-star.com/kr/" target="_blank">작혼: 리치 마작</a></p>
                 <p><a href="https://store.steampowered.com/app/578080/PUBG_BATTLEGROUNDS/" target="_blank">배틀그라운드</a></p>
@@ -72,4 +72,5 @@
         </footer>
     </div>
 </body>
+
 </html>
